@@ -213,6 +213,12 @@ isOkNetscapeParam( int param )
 	case SLAPI_PLUGIN_COMPUTE_EVALUATOR_FN:
 	case SLAPI_PLUGIN_COMPUTE_SEARCH_REWRITER_FN:
 	case SLAPI_PLUGIN_ACL_ALLOW_ACCESS:
+	case SLAPI_X_PLUGIN_PRE_GROUP_FN:
+	case SLAPI_X_PLUGIN_POST_GROUP_FN:
+	case SLAPI_X_GROUP_ENTRY:
+	case SLAPI_X_GROUP_ATTRIBUTE:
+	case SLAPI_X_GROUP_OPERATION_DN:
+	case SLAPI_X_GROUP_TARGET_ENTRY:
 		return LDAP_SUCCESS;
 	default:
 		return INVALID_PARAM;
